--- a/text/refs.bib
+++ b/text/refs.bib
@@ -386,3 +386,12 @@ Columbia, Canada}},
   journal       = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep.},
   volume        = {2022/001}
 }
+
+@article{anderson2019,
+  title = {A Reproducible Data Synopsis for over 100 Species of {British Columbia} Groundfish},
+  author = {Anderson, S.C. and Keppel, E. A. and Edwards, A. M.},
+  year = {2019},
+  journal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
+  volume = {2019/041},
+  pages = {vii~+~321~p},
+}
