Update pcod data 2021

--- a/text/refs.bib
+++ b/text/refs.bib
@@ -18,6 +18,14 @@
   volume        = {2020/025}
 }
 
+@Article{         dfo2022bocaccio,
+  author        = {DFO},
+  year          = {2022},
+  title         = {Update of the 2019 {Bocaccio} ({\emph{Sebastes paucispinis}}) stock assessment for {British Columbia} in 2021},
+  journal       = {DFO Can. Sci. Advis. Sec. Sci. Resp.},
+  volume        = {2022/001}
+}
+
 @Article{         holt2016lingsog,
   author        = {Holt, K. R. and King, J. R. and Krishka, B. A.},
   year          = {2016},
@@ -74,6 +82,15 @@
   pages         = {v + 215~p}
 }
 
+@Article{         dfo2021pcod,
+  author        = {DFO},
+  year          = {2021},
+  title         = {Status update of {Pacific Cod} ({\emph{Gadus macrocephalus}})
+                  for {West Coast Vancouver Island} (area {3CD}), and {Hecate strait}
+                  and {Queen Charlotte} sound (area {5ABCD}) in 2020},
+  journal       = {DFO Can. Sci. Advis. Sec. Sci. Resp.},
+  volume        = {2021/002}
+}
 
 @Article{         yamanaka2011quillback,
   author        = {Yamanaka, K. L. and McAllister, M. K. and Etienne, M.-P. and
@@ -394,4 +411,13 @@ Columbia, Canada}},
   journal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
   volume = {2019/041},
   pages = {vii~+~321~p},
+}
+
+@article {anderson2021sopopreprint,
+	author = {Anderson, Sean C. and Connors, Brendan M. and English, Philina A. and Forrest, Robyn E. and Haigh, Rowan and Holt, Kendra R.},
+	title = {Trends in Pacific Canadian groundfish stock status},
+	elocation-id = {2021.12.13.472502},
+	year = {2021},
+	doi = {10.1101/2021.12.13.472502},
+	journal = {bioRxiv}
 }
