--- a/text/refs.bib
+++ b/text/refs.bib
@@ -421,3 +421,12 @@ Columbia, Canada}},
 	doi = {10.1101/2021.12.13.472502},
 	journal = {bioRxiv}
 }
+
+@Article{         stanly2009canary,
+  author        = {Stanley, R. D. and Starr, P. J. and Olsen, N.},
+  year          = {2009},
+  title         = {Stock assessment for {Canary rockfish} ({\emph{Sebastes pinniger}}) in {British Columbia} waters},
+  journal       = {DFO Can. Sci. Advis. Sec. Res. Doc.},
+  volume        = {2009/013},
+  pages         = {xxii + 198~p}
+}
